added contents of blocks

--- a/homeworks/Andrii.Morozov_AndriiMorozov88/6-adaptive/index_adaptive.html
+++ b/homeworks/Andrii.Morozov_AndriiMorozov88/6-adaptive/index_adaptive.html
@@ -39,15 +39,51 @@
             <div class="page__text">Need to send something on time? Delivery is process of transporting goods</div>
             <div class="page__text">from a source location to predefined destination</div>
             <div class="page__offers">
-                <div class="page__offers-block page__offers-block-color-a"></div>
-                <div class="page__offers-block page__offers-block-color-b"></div>
-                <div class="page__offers-block page__offers-block-color-c"></div>
-                <div class="page__offers-block page__offers-block-color-b"></div>
-                <div class="page__offers-block page__offers-block-color-c"></div>
-                <div class="page__offers-block page__offers-block-color-a"></div>
-                <div class="page__offers-block page__offers-block-color-c"></div>
-                <div class="page__offers-block page__offers-block-color-b"></div>
-                <div class="page__offers-block page__offers-block-color-a"></div>
+                <div class="page__offers-block page__offers-block-color-a">
+                    <img src="images/1x/Group1.png" alt="">
+                    <h2>Industry-leading tech</h2>
+                    <p>Delivery is process of transporting rom a source point to predefined destination</p>
+                </div>
+                <div class="page__offers-block page__offers-block-color-b">
+                    <img src="images/1x/Group3.png" alt="">
+                    <h2>Nationwide coverage</h2>
+                    <p>Delivery is process of transporting rom a source point to predefined destination</p>
+                </div>
+                <div class="page__offers-block page__offers-block-color-c">
+                    <img src="images/1x/Group2.png" alt="">
+                    <h2>Fastest delivery</h2>
+                    <p>Delivery is process of transporting rom a source point to predefined destination</p>
+                </div>
+                <div class="page__offers-block page__offers-block-color-b">
+                    <img src="images/1x/Group4.png" alt="">
+                    <h2>Next day payment</h2>
+                    <p>Delivery is process of transporting rom a source point to predefined destination</p>
+                </div>
+                <div class="page__offers-block page__offers-block-color-c">
+                    <img src="images/1x/Group5.png" alt="">
+                    <h2>Best COD rated</h2>
+                    <p>Delivery is process of transporting rom a source point to predefined destination</p>
+                </div>
+                <div class="page__offers-block page__offers-block-color-a">
+                    <img src="images/1x/Group6.png" alt="">
+                    <h2>Secure handling</h2>
+                    <p>Delivery is process of transporting rom a source point to predefined destination</p>
+                </div>
+                <div class="page__offers-block page__offers-block-color-c">
+                    <img src="images/1x/Group8.png" alt="">
+                    <h2>Product insurance</h2>
+                    <p>Delivery is process of transporting rom a source point to predefined destination</p>
+                </div>
+                <div class="page__offers-block page__offers-block-color-b">
+                    <img src="images/1x/Group9.png" alt="">
+                    <h2>Verified products</h2>
+                    <p>Delivery is process of transporting rom a source point to predefined destination</p>
+                </div>
+                <div class="page__offers-block page__offers-block-color-a">
+                    <img src="images/1x/Group1.png" alt="">
+                    <h2>Reatime Monitoring</h2>
+                    <p>Delivery is process of transporting rom a source point to predefined destination</p>
+                </div>
             </div>
             <div class="page__apply">
                 <img src="images/1x/bonik_right_1x.png" alt="" class="page__bonik">
