added signature of pictures

--- a/homeworks/Andrii.Morozov_AndriiMorozov88/6-adaptive/index_adaptive.html
+++ b/homeworks/Andrii.Morozov_AndriiMorozov88/6-adaptive/index_adaptive.html
@@ -99,6 +99,13 @@
             <div class="page__news">
                 <div class="page__news-block">
                     <img src="images/1x/Rectangle21.png" alt="">
+                    <div class="page__news-block-signature">
+                        UI/UX design
+                        <div class="page__news-block-signature-right">
+                            <img src="images/1x/Vector.png" alt="" class="page__news-block-signature-img">
+                            12450
+                        </div>
+                    </div>
                     <div class="page__news-block-big">
                         <b>Our UX Studio digitally transforms</b>
                     </div>
@@ -113,6 +120,13 @@
                 </div>
                 <div class="page__news-block">
                     <img src="images/1x/Rectangle22.png" alt="">
+                    <div class="page__news-block-signature">
+                        Apps design
+                        <div class="page__news-block-signature-right">
+                            <img src="images/1x/Vector.png" alt="" class="page__news-block-signature-img">
+                            2953
+                        </div>
+                    </div>
                     <div class="page__news-block-big">
                         <b>Your customer do need comprehensive</b>
                     </div>
@@ -126,6 +140,13 @@
                 </div>
                 <div class="page__news-block">
                     <img src="images/1x/Rectangle20.png" alt="">
+                    <div class="page__news-block-signature">
+                        Product experience
+                        <div class="page__news-block-signature-right">
+                            <img src="images/1x/Vector.png" alt="" class="page__news-block-signature-img">
+                            7980
+                        </div>
+                    </div>
                     <div class="page__news-block-big">
                         <b>Scale your startup through exceptional</b>
                     </div>
