added picture filrs, added width&height 2X

--- a/homeworks/Andrii.Morozov_AndriiMorozov88/6-adaptive/index_adaptive.html
+++ b/homeworks/Andrii.Morozov_AndriiMorozov88/6-adaptive/index_adaptive.html
@@ -11,7 +11,7 @@
             <img src="images/1x/Group7.png" alt="">
         </header>
         <main class="page">
-            <div class="page__track">
+            <section class="page__track">
                 <div class="page__track_textfield">
                     <div class="page__track_textfield-text-big">
                         <b>Delivery is Process</b>
@@ -34,11 +34,11 @@
                     </div>
                 </div>
                 <img src="images/1x/bonik_left_1x.png" alt="" class="page__bonik">
-            </div>
+            </section>
             <h2 class="page__title">Why Choose Us?</h2>
             <div class="page__text">Need to send something on time? Delivery is process of transporting goods</div>
             <div class="page__text">from a source location to predefined destination</div>
-            <div class="page__offers">
+            <section class="page__offers">
                 <div class="page__offers-block page__offers-block-color-a">
                     <img src="images/1x/Group1.png" alt="">
                     <h2>Industry-leading tech</h2>
@@ -84,8 +84,8 @@
                     <h2>Reatime Monitoring</h2>
                     <p>Delivery is process of transporting rom a source point to predefined destination</p>
                 </div>
-            </div>
-            <div class="page__apply">
+            </section>
+            <section class="page__apply">
                 <img src="images/1x/bonik_right_1x.png" alt="" class="page__bonik">
                 <div class="page__apply-aside">
                     <h2 class="page__title">Apply for Ambassador</h2>
@@ -94,11 +94,11 @@
                     <div class="page__apply-aside-lines">predefined destination</div>
                     <button type="button" class="page__apply-aside-button">Apply Now</button>
                 </div>
-            </div>
+            </section>
             <h2 class="page__title">Company News Our Latest Article & Tips for You</h2>
-            <div class="page__news">
+            <section class="page__news">
                 <div class="page__news-block">
-                    <img src="images/1x/Rectangle21.png" alt="">
+                    <img src="images/1x/Rectangle21.png" alt="" class="page__news-block-img">
                     <div class="page__news-block-signature">
                         UI/UX design
                         <div class="page__news-block-signature-right">
@@ -119,7 +119,7 @@
                     </p>
                 </div>
                 <div class="page__news-block">
-                    <img src="images/1x/Rectangle22.png" alt="">
+                    <img src="images/1x/Rectangle22.png" alt="" class="page__news-block-img">
                     <div class="page__news-block-signature">
                         Apps design
                         <div class="page__news-block-signature-right">
@@ -139,7 +139,7 @@
                     </p>
                 </div>
                 <div class="page__news-block">
-                    <img src="images/1x/Rectangle20.png" alt="">
+                    <img src="images/1x/Rectangle20.png" alt="" class="page__news-block-img">
                     <div class="page__news-block-signature">
                         Product experience
                         <div class="page__news-block-signature-right">
@@ -159,7 +159,7 @@
                         <a href="#">Learn more</a>
                     </p>
                 </div>
-            </div>
+            </section>
         </main>
         <img src="images/1x/Group727.png" alt="" class="page__clients">
         <footer class="page__bottom">
