--- a/homeworks/Andrii.Morozov_AndriiMorozov88/6-adaptive/index_adaptive.html
+++ b/homeworks/Andrii.Morozov_AndriiMorozov88/6-adaptive/index_adaptive.html
@@ -33,60 +33,66 @@
                         <button type="button" class="page__track_inputfield-button">Track Parcel</button>
                     </div>
                 </div>
-                <img src="images/1x/bonik_left_1x.png" alt="" class="page__bonik">
+                <picture class="page__bonik">
+                    <source srcset="images/2x/bonik_left_2x.png 2x">
+                    <img src="images/1x/bonik_left_1x.png" alt="bonik">
+                </picture>
             </section>
             <h2 class="page__title">Why Choose Us?</h2>
             <div class="page__text">Need to send something on time? Delivery is process of transporting goods</div>
             <div class="page__text">from a source location to predefined destination</div>
             <section class="page__offers">
                 <div class="page__offers-block page__offers-block-color-a">
-                    <img src="images/1x/Group1.png" alt="">
+                    <img src="images/1x/Group1.png" alt="Industry-leading tech">
                     <h2>Industry-leading tech</h2>
                     <p>Delivery is process of transporting rom a source point to predefined destination</p>
                 </div>
                 <div class="page__offers-block page__offers-block-color-b">
-                    <img src="images/1x/Group3.png" alt="">
+                    <img src="images/1x/Group3.png" alt="Nationwide coverage">
                     <h2>Nationwide coverage</h2>
                     <p>Delivery is process of transporting rom a source point to predefined destination</p>
                 </div>
                 <div class="page__offers-block page__offers-block-color-c">
-                    <img src="images/1x/Group2.png" alt="">
+                    <img src="images/1x/Group2.png" alt="Fastest delivery">
                     <h2>Fastest delivery</h2>
                     <p>Delivery is process of transporting rom a source point to predefined destination</p>
                 </div>
                 <div class="page__offers-block page__offers-block-color-b">
-                    <img src="images/1x/Group4.png" alt="">
+                    <img src="images/1x/Group4.png" alt="Next day payment">
                     <h2>Next day payment</h2>
                     <p>Delivery is process of transporting rom a source point to predefined destination</p>
                 </div>
                 <div class="page__offers-block page__offers-block-color-c">
-                    <img src="images/1x/Group5.png" alt="">
+                    <img src="images/1x/Group5.png" alt="Best COD rated">
                     <h2>Best COD rated</h2>
                     <p>Delivery is process of transporting rom a source point to predefined destination</p>
                 </div>
                 <div class="page__offers-block page__offers-block-color-a">
-                    <img src="images/1x/Group6.png" alt="">
+                    <img src="images/1x/Group6.png" alt="Secure handling">
                     <h2>Secure handling</h2>
                     <p>Delivery is process of transporting rom a source point to predefined destination</p>
                 </div>
                 <div class="page__offers-block page__offers-block-color-c">
-                    <img src="images/1x/Group8.png" alt="">
+                    <img src="images/1x/Group8.png" alt="Product insurance">
                     <h2>Product insurance</h2>
                     <p>Delivery is process of transporting rom a source point to predefined destination</p>
                 </div>
                 <div class="page__offers-block page__offers-block-color-b">
-                    <img src="images/1x/Group9.png" alt="">
+                    <img src="images/1x/Group9.png" alt="Verified products">
                     <h2>Verified products</h2>
                     <p>Delivery is process of transporting rom a source point to predefined destination</p>
                 </div>
                 <div class="page__offers-block page__offers-block-color-a">
-                    <img src="images/1x/Group1.png" alt="">
+                    <img src="images/1x/Group1.png" alt="Reatime Monitoring">
                     <h2>Reatime Monitoring</h2>
                     <p>Delivery is process of transporting rom a source point to predefined destination</p>
                 </div>
             </section>
             <section class="page__apply">
-                <img src="images/1x/bonik_right_1x.png" alt="" class="page__bonik">
+                <picture class="page__bonik">
+                    <source srcset="images/2x/bonik_right_2x.png 2x">
+                    <img src="images/1x/bonik_right_1x.png" alt="bonik">
+                </picture>
                 <div class="page__apply-aside">
                     <h2 class="page__title">Apply for Ambassador</h2>
                     <div class="page__apply-aside-lines">Need to send something on time? Delivery is process of</div>
@@ -98,11 +104,14 @@
             <h2 class="page__title">Company News Our Latest Article & Tips for You</h2>
             <section class="page__news">
                 <div class="page__news-block">
-                    <img src="images/1x/Rectangle21.png" alt="" class="page__news-block-img">
+                    <picture class="page__news-block-img">
+                        <source srcset="images/2x/Rectangle21_2x.png 2x">
+                        <img src="images/1x/Rectangle21.png" alt="laptop">
+                    </picture>
                     <div class="page__news-block-signature">
                         UI/UX design
                         <div class="page__news-block-signature-right">
-                            <img src="images/1x/Vector.png" alt="" class="page__news-block-signature-img">
+                            <img src="images/1x/Vector.png" alt="eye" class="page__news-block-signature-img">
                             12450
                         </div>
                     </div>
@@ -119,11 +128,14 @@
                     </p>
                 </div>
                 <div class="page__news-block">
-                    <img src="images/1x/Rectangle22.png" alt="" class="page__news-block-img">
+                    <picture class="page__news-block-img">
+                        <source srcset="images/2x/Rectangle22_2x.png 2x">
+                        <img src="images/1x/Rectangle22.png" alt="laptop">
+                    </picture>
                     <div class="page__news-block-signature">
                         Apps design
                         <div class="page__news-block-signature-right">
-                            <img src="images/1x/Vector.png" alt="" class="page__news-block-signature-img">
+                            <img src="images/1x/Vector.png" alt="eye" class="page__news-block-signature-img">
                             2953
                         </div>
                     </div>
@@ -139,11 +151,14 @@
                     </p>
                 </div>
                 <div class="page__news-block">
-                    <img src="images/1x/Rectangle20.png" alt="" class="page__news-block-img">
+                    <picture class="page__news-block-img">
+                        <source srcset="images/2x/Rectangle20_2x.png 2x">
+                        <img src="images/1x/Rectangle20.png" alt="Iphone">
+                    </picture>
                     <div class="page__news-block-signature">
                         Product experience
                         <div class="page__news-block-signature-right">
-                            <img src="images/1x/Vector.png" alt="" class="page__news-block-signature-img">
+                            <img src="images/1x/Vector.png" alt="eye" class="page__news-block-signature-img">
                             7980
                         </div>
                     </div>
