--- a/homeworks/ivan.bieliaiev_Ckakipaki/6-adaptive/index.html
+++ b/homeworks/ivan.bieliaiev_Ckakipaki/6-adaptive/index.html
@@ -8,6 +8,84 @@
         <title>6-adaptive</title>
     </head>
     <body>
-        <div></div>
+        <header class="header">
+            <picture class="company__logo">
+                <img src="img/logo.svg" alt="logo">
+            </picture>
+            <div class="header__actions">
+                <div class="action__phone">
+                    <img src="img/phone.svg" alt="phone" class="phone__img">
+                    <p class="phone__number">+088 01877576457</p>
+                </div>
+                <button type="button" class="action__sign-in">
+                    Sign In
+                </button>
+                <div class="action__language">
+                    <img src="img/lang.svg" alt="globus" class="language__globus">
+                    <p class="language__text">EN</p>
+                </div>
+            </div>
+        </header>
+        <section class="about-us">
+            <div class="about-us__content">
+                <h1 class="about-us__title">
+                    Delivery is Process
+                    Going From Source Point to Predefined Destination.
+                </h1>
+                <p class="about-us__subtitle">
+                    Need to send something on time? Delivery is process of
+                    transporting goods from a source location to a predefined destination.
+                </p>
+                <div class="about-us__search">
+                    <input type="text">
+                    <button type="button"></button>
+                </div>
+            </div>
+            <picture class="bike-deliver">
+                <source srcset="img/biker2x.png 2x" type="image/png">
+                <img src="img/biker1x.png" alt="biker">
+            </picture>
+        </section>
+        <section class="advantages">
+            <p class="advantages__title"></p>
+            <p class="advantages__subtitle"></p>
+            <div class="advantages__list"></div>
+        </section>
+        <section class="job-offer">
+            <div class="bike-deliver__reverse"></div>
+            <div class="job-offer__content">
+                <p class="job-offer__title"></p>
+                <p class="job-offer__subtitle"></p>
+                <button type="button" class="job-offer__button"></button>
+            </div>
+        </section>
+        <section class="news-tips">
+            <p class="news-tips__title"></p>
+            <div class="news-tips__list"></div>
+        </section>
+        <section class="clients">
+            <p class="clients__title"></p>
+            <div class="clients__list"></div>
+        </section>
+        <footer class="footer">
+            <div class="footer__content">
+                <div class="footer__communication">
+                    <div class="company__logo"></div>
+                    <p class="communication__address"></p>
+                    <div class="communication__social-networks">
+
+                    </div>
+                </div>
+                <div class="footer__important-links">
+                    <div class="important-links__title"></div>
+                    <div class="important-links__list"></div>
+                </div>
+                <div class="footer__policy">
+                    <div class="policy__title"></div>
+                    <div class="policy__list"></div>
+                </div>
+            </div>
+            <div class="footer__founder"></div>
+        </footer>
     </body>
 </html>
