changes in HTML

--- a/homeworks/Andrii.Morozov_AndriiMorozov88/6-adaptive/index_adaptive.html
+++ b/homeworks/Andrii.Morozov_AndriiMorozov88/6-adaptive/index_adaptive.html
@@ -14,18 +14,11 @@
             <section class="page__track">
                 <div class="page__track_textfield">
                     <div class="page__track_textfield-text-big">
-                        <b>Delivery is Process</b>
-                    </div>
-                    <div class="page__track_textfield-text-big">
-                        <b>Going From Source Point to</b>
-                    </div>
-                    <div class="page__track_textfield-text-big">
-                        <b>Predefined Destination</b>
+                        <b>Delivery is Process Going From Source Point to Predefined Destination</b>
                     </div>
                     <br>
                     <br>
-                    <div class="page__track_textfield-text-small">Need to send something on time? Delivery is process of transporting goods</div>
-                    <div class="page__track_textfield-text-small">from a source location to predefined destination</div>
+                    <div class="page__track_textfield-text-small">Need to send something on time? Delivery is process of transporting goods from a source location to predefined destination</div>
                     <br>
                     <br>
                     <div class="page__track_inputfield">
@@ -39,8 +32,7 @@
                 </picture>
             </section>
             <h2 class="page__title">Why Choose Us?</h2>
-            <div class="page__text">Need to send something on time? Delivery is process of transporting goods</div>
-            <div class="page__text">from a source location to predefined destination</div>
+            <div class="page__text">Need to send something on time? Delivery is process of transporting goods from a source location to predefined destination</div>
             <section class="page__offers">
                 <div class="page__offers-block page__offers-block-color-a">
                     <img src="images/1x/Group1.png" alt="Industry-leading tech">
@@ -95,9 +87,7 @@
                 </picture>
                 <div class="page__apply-aside">
                     <h2 class="page__title">Apply for Ambassador</h2>
-                    <div class="page__apply-aside-lines">Need to send something on time? Delivery is process of</div>
-                    <div class="page__apply-aside-lines">transporting goods from a source location to</div>
-                    <div class="page__apply-aside-lines">predefined destination</div>
+                    <div class="page__apply-aside-lines">Need to send something on time? Delivery is process of transporting goods from a source location to predefined destination</div>
                     <button type="button" class="page__apply-aside-button">Apply Now</button>
                 </div>
             </section>
