--- a/homeworks/maksym.selenkov_MaksymSelenkov/6-adaptive/index.html
+++ b/homeworks/maksym.selenkov_MaksymSelenkov/6-adaptive/index.html
@@ -112,8 +112,8 @@
                     <section class="news__heading section__heading">
                         <h2 class="section__title">Company News Our Latest Artical </br> & Tips for You</h2>
                     </section>
-                    <article class="news__items">
-                        <div class="news__item article">
+                    <section class="news__items">
+                        <article class="news__item article">
                             <picture class="article__picture">
                                 <source srcset="./images/Rectangle 21@2x.png 2x">
                                 <img src="./images/Rectangle%2021.png" alt="bonik">
@@ -130,8 +130,8 @@
                             <a href="" class="article__link">
                                 <img src="./images/learn.svg" alt="learn">
                             </a>
-                        </div>
-                        <div class="news__item article">
+                        </article>
+                        <article class="news__item article">
                             <picture class="article__picture">
                                 <source srcset="./images/Rectangle 22@2x.png 2x">
                                 <img src="./images/Rectangle%2022.png" alt="bonik">
@@ -148,8 +148,8 @@
                             <a href="" class="article__link">
                                 <img src="./images/learn.svg" alt="learn">
                             </a>
-                        </div>
-                        <div class="news__item article">
+                        </article>
+                        <article class="news__item article">
                             <picture class="article__picture">
                                 <source srcset="./images/Rectangle 20@2x.png 2x">
                                 <img src="./images/Rectangle%2020.png" alt="bonik">
@@ -166,8 +166,8 @@
                             <a href="" class="article__link">
                                 <img src="./images/learn.svg" alt="learn">
                             </a>
-                        </div>
-                    </article>
+                        </article>
+                    </section>
                 </section>
                 <section class="clients">
                     <section class="clients__heading section__heading">
