--- a/homeworks/vladyslav.kovalov_kovalov/6-adaptive/index.html
+++ b/homeworks/vladyslav.kovalov_kovalov/6-adaptive/index.html
@@ -8,20 +8,60 @@
         <title>Bonik delivery | Landing page</title>
     </head>
     <body>
+        <svg xmlns="http://www.w3.org/2000/svg" style="display: none !important;">
+            <symbol id="tel-icon">
+                <title>Tel icon</title>
+                <svg viewBox="0 0 12 16">
+                    <path class="tel-icon" fill="#E24329" d="M1.86633 0.46705L3.1574 0.0777966C3.58349 -0.0504663 4.0417 -0.0193459 4.44654 0.165353C4.85138 0.350051 5.17521 0.675714 5.35761 1.08159L6.26276 3.09451C6.41986 3.44372 6.46365 3.83337 6.38798 4.20874C6.31231 4.5841 6.12098 4.92635 5.84085 5.18742L4.46313 6.47116C4.2785 6.64645 4.41847 7.32965 5.093 8.49874C5.7682 9.6685 6.29009 10.1311 6.53071 10.0591L8.33567 9.5072C8.70154 9.39529 9.09325 9.40068 9.45591 9.5226C9.81856 9.64452 10.134 9.87686 10.3579 10.1871L11.6443 11.97C11.9042 12.3301 12.0245 12.7722 11.9829 13.2142C11.9414 13.6563 11.7408 14.0682 11.4184 14.3735L10.4239 15.3153C10.1029 15.6194 9.70695 15.8328 9.27651 15.9338C8.84607 16.0349 8.39653 16.02 7.97375 15.8906C5.89017 15.2527 3.96057 13.3597 2.15893 10.2384C0.353304 7.11236 -0.328557 4.47556 0.14668 2.32134C0.24253 1.88726 0.45241 1.4866 0.754686 1.16066C1.05696 0.834718 1.44069 0.595288 1.86633 0.46705V0.46705Z"></path>
+                </svg>
+            </symbol>
+            <symbol id="world-icon">
+                <svg viewBox="0 0 21 20">
+                    <title>World icon</title>
+                    <path class="world-icon" fill="#828282" d="M15.351 12C15.431 11.34 15.491 10.68 15.491 10C15.491 9.32 15.431 8.66 15.351 8H18.731C18.891 8.64 18.991 9.31 18.991 10C18.991 10.69 18.891 11.36 18.731 12H15.351ZM13.581 17.56C14.181 16.45 14.641 15.25 14.961 14H17.911C16.9421 15.6683 15.4051 16.932 13.581 17.56ZM13.331 12H8.65097C8.55097 11.34 8.49097 10.68 8.49097 10C8.49097 9.32 8.55097 8.65 8.65097 8H13.331C13.421 8.65 13.491 9.32 13.491 10C13.491 10.68 13.421 11.34 13.331 12ZM10.991 17.96C10.161 16.76 9.49097 15.43 9.08097 14H12.901C12.491 15.43 11.821 16.76 10.991 17.96ZM6.99097 6H4.07097C5.02982 4.32721 6.56576 3.06149 8.39097 2.44C7.79097 3.55 7.34097 4.75 6.99097 6ZM4.07097 14H6.99097C7.34097 15.25 7.79097 16.45 8.39097 17.56C6.56959 16.9317 5.03581 15.6677 4.07097 14ZM3.25097 12C3.09097 11.36 2.99097 10.69 2.99097 10C2.99097 9.31 3.09097 8.64 3.25097 8H6.63097C6.55097 8.66 6.49097 9.32 6.49097 10C6.49097 10.68 6.55097 11.34 6.63097 12H3.25097ZM10.991 2.03C11.821 3.23 12.491 4.57 12.901 6H9.08097C9.49097 4.57 10.161 3.23 10.991 2.03ZM17.911 6H14.961C14.648 4.76146 14.1845 3.5659 13.581 2.44C15.421 3.07 16.951 4.34 17.911 6ZM10.991 0C5.46097 0 0.990967 4.5 0.990967 10C0.990967 12.6522 2.04454 15.1957 3.9199 17.0711C4.84848 17.9997 5.95088 18.7362 7.16413 19.2388C8.37739 19.7413 9.67775 20 10.991 20C13.6431 20 16.1867 18.9464 18.062 17.0711C19.9374 15.1957 20.991 12.6522 20.991 10C20.991 8.68678 20.7323 7.38642 20.2298 6.17317C19.7272 4.95991 18.9906 3.85752 18.062 2.92893C17.1334 2.00035 16.0311 1.26375 14.8178 0.761205C13.6045 0.258658 12.3042 0 10.991 0Z"></path>
+                </svg>
+            </symbol>
+            <symbol id="views-icon">
+                <svg viewBox="0 0 18 12">
+                    <title>Views icon</title>
+                    <path fill="#666666" d="M17.8912 5.54375C16.1965 2.23719 12.8415 0 8.99998 0C5.15842 0 1.80248 2.23875 0.108733 5.54406C0.037246 5.68547 0 5.8417 0 6.00016C0 6.15861 0.037246 6.31484 0.108733 6.45625C1.80342 9.76281 5.15842 12 8.99998 12C12.8415 12 16.1975 9.76125 17.8912 6.45594C17.9627 6.31453 18 6.1583 18 5.99984C18 5.84139 17.9627 5.68516 17.8912 5.54375ZM8.99998 10.5C8.10997 10.5 7.23994 10.2361 6.49992 9.74161C5.7599 9.24715 5.18312 8.54434 4.84253 7.72208C4.50193 6.89981 4.41282 5.99501 4.58645 5.12209C4.76008 4.24918 5.18867 3.44736 5.818 2.81802C6.44734 2.18868 7.24916 1.7601 8.12208 1.58647C8.99499 1.41283 9.89979 1.50195 10.7221 1.84254C11.5443 2.18314 12.2471 2.75991 12.7416 3.49993C13.2361 4.23995 13.5 5.10998 13.5 6C13.5003 6.59103 13.3841 7.17632 13.158 7.72242C12.932 8.26851 12.6005 8.7647 12.1826 9.18262C11.7647 9.60054 11.2685 9.932 10.7224 10.158C10.1763 10.3841 9.59101 10.5003 8.99998 10.5ZM8.99998 3C8.73221 3.00374 8.46617 3.04358 8.20905 3.11844C8.42099 3.40646 8.5227 3.7609 8.49572 4.11748C8.46875 4.47406 8.31487 4.80917 8.06201 5.06203C7.80915 5.31489 7.47405 5.46876 7.11747 5.49574C6.76088 5.52271 6.40644 5.42101 6.11842 5.20906C5.95441 5.81331 5.98402 6.45377 6.20307 7.04031C6.42213 7.62685 6.8196 8.12993 7.33955 8.47874C7.8595 8.82754 8.47574 9.00452 9.10153 8.98475C9.72733 8.96498 10.3312 8.74946 10.8281 8.36853C11.325 7.9876 11.6899 7.46044 11.8715 6.86125C12.0531 6.26205 12.0422 5.62099 11.8404 5.0283C11.6386 4.43561 11.256 3.92114 10.7464 3.55728C10.2369 3.19343 9.62609 2.99853 8.99998 3Z"></path>
+                </svg>
+            </symbol>
+            <symbol id="arrow-right-icon">
+                <svg viewBox="0 0 18 16">
+                    <path d="M1 8H17" stroke="#29DBCC" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"></path>
+                    <path d="M10 1L17 8L10 15" stroke="#29DBCC" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"></path>
+                </svg>
+            </symbol>
+        </svg>
         <header class="main-header">
             <div class="main-header__container page-container">
-                <img src="img/bonik-logo.svg" alt="" class="main-header__logo">
+                <picture class="main-header__logo-container">
+                    <source srcset="img/bonik-logo-x2.webp 2x">
+                    <img class="main-header__logo" src="img/bonik-logo.webp" alt="Delivery guy on scooter">
+                </picture>
+                <img src="img/" alt="" class="main-header__logo">
                 <div class="main-header__tel">
-                    <img src="img/icons/tel-icon.svg" alt="phone icon" class="main-header__icon">
+                    <svg class="main-header__icon">
+                        <use xlink:href="#tel-icon"></use>
+                    </svg>
                     <a href="tel:+08801877576457" class="main-header__link">+088 01877576457</a>
                 </div>
                 <button class="main-header__button button button--action button--sign-in" type="button">
                     Sign In
                 </button>
-                <button class="main-header__button main-header__button--language-switcher button button--language-switcher" type="button">
-                    <img src="img/icons/lang-icon.svg" alt="" class="button__icon">
-                    EN
-                </button>
+                <div class="language-dropdown">
+                    <button class="main-header__button main-header__button--language-switcher button button--language-switcher" type="button">
+                        <svg class="button__icon">
+                            <use xlink:href="#world-icon"></use>
+                        </svg>
+                        EN
+                    </button>
+                    <div class="language-dropdown-content">
+                        <a class="language-dropdown-content__link" href="#">RU</a>
+                        <a class="language-dropdown-content__link" href="#">UA</a>
+                    </div>
+                </div>
             </div>
         </header>
         <section class="hero-section">
@@ -40,9 +80,9 @@
                         <button class="hero-section__tracking-form-button button" type="button">Track Percel</button>
                     </form>
                 </div>
-                <picture class="hero-section__image">
-                    <source srcset="img/lg-images/bonik-hero-image-x2.png 2x">
-                    <img src="img/lg-images/bonik-hero-image.png" alt="Delivery guy on scooter">
+                <picture class="hero-section__image-container">
+                    <source srcset="img/lg-images/bonik-hero-image-x2.webp 2x">
+                    <img class="hero-section__image" src="img/lg-images/bonik-hero-image.webp" alt="Delivery guy on scooter">
                 </picture>
             </div>
         </section>
@@ -141,9 +181,9 @@
         </section>
         <section class="apply-section">
             <div class="apply-section__container page-container">
-                <picture class="apply-section__image">
-                    <source srcset="img/lg-images/bonik-hero-image-reversed-x2.png 2x">
-                    <img src="img/lg-images/bonik-hero-image-reversed.png" alt="Delivery guy on scooter">
+                <picture class="apply-section__image-container">
+                    <source srcset="img/lg-images/bonik-hero-image-reversed-x2.webp 2x">
+                    <img class="apply-section__image" src="img/lg-images/bonik-hero-image-reversed.webp" alt="Delivery guy on scooter">
                 </picture>
                 <div class="apply-section__information">
                     <h2 class="apply-section__title">
@@ -165,11 +205,16 @@
                 </h2>
                 <div class="news-section__articles-container">
                     <div class="article-card">
-                        <img src="img/lg-images/article-1.jpg" alt="Photo of laptop" class="article-card__image">
+                        <picture class="article-card__image-container">
+                            <source srcset="img/lg-images/article-1-x2.jpg 2x">
+                            <img class="article-card__image" src="img/lg-images/article-1.jpg" alt="Photo of laptop">
+                        </picture>
                         <div class="article-card__category">
                             UI / UX Design
                             <span class="article-card__views">
-                                <img src="img/icons/views-eye-icon.svg" alt="" class="article-card__icon">
+                                <svg class="article-card__icon">
+                                    <use xlink:href="#views-icon"></use>
+                                </svg>
                                 <span class="article-card__counter">12450</span>
                             </span>
                         </div>
@@ -181,15 +226,22 @@
                         </p>
                         <a href="#" class="article-card__link">
                             Learn More
-                            <img src="img/icons/arrow-icon.svg" alt="" class="article-card__arrow-icon">
+                            <svg class="article-card__arrow-icon">
+                                <use xlink:href="#arrow-right-icon"></use>
+                            </svg>
                         </a>
                     </div>
                     <div class="article-card">
-                        <img src="img/lg-images/article-2.jpg" alt="Photo of dashboard on laptop" class="article-card__image">
+                        <picture class="article-card__image-container">
+                            <source srcset="img/lg-images/article-2-x2.jpg 2x">
+                            <img class="article-card__image" src="img/lg-images/article-2.jpg" alt="Photo of dashboard on laptop">
+                        </picture>
                         <div class="article-card__category">
                             Apps Design
                             <span class="article-card__views">
-                                <img src="img/icons/views-eye-icon.svg" alt="" class="article-card__icon">
+                                <svg class="article-card__icon">
+                                    <use xlink:href="#views-icon"></use>
+                                </svg>
                                 <span class="article-card__counter">2953</span>
                             </span>
                         </div>
@@ -201,15 +253,22 @@
                         </p>
                         <a href="#" class="article-card__link">
                             Learn More
-                            <img src="img/icons/arrow-icon.svg" alt="" class="article-card__arrow-icon">
+                            <svg class="article-card__arrow-icon">
+                                <use xlink:href="#arrow-right-icon"></use>
+                            </svg>
                         </a>
                     </div>
                     <div class="article-card">
-                        <img src="img/lg-images/article-3.jpg" alt="Photo of mobile phone app" class="article-card__image">
+                        <picture class="article-card__image-container">
+                            <source srcset="img/lg-images/article-3-x2.jpg 2x">
+                            <img class="article-card__image" src="img/lg-images/article-3.jpg" alt="Photo of mobile phone app">
+                        </picture>
                         <div class="article-card__category">
                             Product Experience
                             <span class="article-card__views">
-                                <img src="img/icons/views-eye-icon.svg" alt="" class="article-card__icon">
+                                <svg class="article-card__icon">
+                                    <use xlink:href="#views-icon"></use>
+                                </svg>
                                 <span class="article-card__counter">7980</span>
                             </span>
                         </div>
@@ -221,7 +280,9 @@
                         </p>
                         <a href="#" class="article-card__link">
                             Learn More
-                            <img src="img/icons/arrow-icon.svg" alt="" class="article-card__arrow-icon">
+                            <svg class="article-card__arrow-icon">
+                                <use xlink:href="#arrow-right-icon"></use>
+                            </svg>
                         </a>
                     </div>
                 </div>
@@ -245,7 +306,10 @@
         <footer class="main-footer">
             <div class="main-footer__container page-container">
                 <div class="main-footer__company-info">
-                    <img src="img/bonik-logo.svg" alt="Company logo" class="main-footer__logo">
+                    <picture class="main-footer__logo-container">
+                        <source srcset="img/bonik-logo-x2.webp 2x">
+                        <img class="main-footer__logo" src="img/bonik-logo.webp" alt="Delivery guy on scooter">
+                    </picture>
                     <address class="main-footer__company-address">
                         10/B, House# 32, Dhaka Uddan
                         Mohammadpur, Dhaka, Bangladesh
