--- a/homeworks/ivan.bieliaiev_Ckakipaki/6-adaptive/index.html
+++ b/homeworks/ivan.bieliaiev_Ckakipaki/6-adaptive/index.html
@@ -4,88 +4,291 @@
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
         <meta http-equiv="X-UA-Compatible" content="ie=edge">
+        <link href="https://allfont.ru/allfont.css?fonts=pragmatica" rel="stylesheet" type="text/css">
+        <link href="http://fonts.cdnfonts.com/css/segoe-ui-4" rel="stylesheet">
         <link rel="stylesheet" href="style.css">
         <title>6-adaptive</title>
     </head>
     <body>
         <header class="header">
-            <picture class="company__logo">
-                <img src="img/logo.svg" alt="logo">
-            </picture>
-            <div class="header__actions">
-                <div class="action__phone">
-                    <img src="img/phone.svg" alt="phone" class="phone__img">
-                    <p class="phone__number">+088 01877576457</p>
-                </div>
-                <button type="button" class="action__sign-in">
-                    Sign In
-                </button>
-                <div class="action__language">
-                    <img src="img/lang.svg" alt="globus" class="language__globus">
-                    <p class="language__text">EN</p>
+            <div class="container header__container">
+                <img src="img/header/logo.svg" alt="logo">
+                <div class="header__actions">
+                    <div class="action__phone">
+                        <img src="img/header/phone.svg" alt="phone" class="phone__img">
+                        <p class="phone__number">+088 01877576457</p>
+                    </div>
+                    <button type="button" class="action__sign-in">
+                        Sign In
+                    </button>
+                    <div class="action__language">
+                        <img src="img/header/lang.svg" alt="globus" class="language__globus">
+                        <p class="language__text">EN</p>
+                    </div>
                 </div>
             </div>
         </header>
         <section class="about-us">
-            <div class="about-us__content">
-                <h1 class="about-us__title">
-                    Delivery is Process
-                    Going From Source Point to Predefined Destination.
-                </h1>
-                <p class="about-us__subtitle">
-                    Need to send something on time? Delivery is process of
-                    transporting goods from a source location to a predefined destination.
-                </p>
-                <div class="about-us__search">
-                    <input type="text">
-                    <button type="button"></button>
+            <div class="container about-us__container">
+                <div class="about-us__content">
+                    <h1 class="about-us__title">
+                        Delivery is Process
+                        Going From Source Point to
+                        Predefined Destination.
+                    </h1>
+                    <p class="about-us__subtitle">
+                        Need to send something on time? Delivery is process of transporting goods
+                        from a source location to a predefined destination.
+                    </p>
+                    <div class="about-us__search">
+                        <input type="text" class="search__input" placeholder="Type your tracking number">
+                        <button type="button" class="search__button">Track Percel</button>
+                    </div>
                 </div>
+                <picture class="bike-deliver">
+                    <source srcset="img/biker/biker2x.png" type="image/png" media="(min-resolution: 1.5)">
+                    <img src="img/biker/biker1x.png" alt="biker">
+                </picture>
             </div>
-            <picture class="bike-deliver">
-                <source srcset="img/biker2x.png 2x" type="image/png">
-                <img src="img/biker1x.png" alt="biker">
-            </picture>
         </section>
         <section class="advantages">
-            <p class="advantages__title"></p>
-            <p class="advantages__subtitle"></p>
-            <div class="advantages__list"></div>
+            <div class="container advantages__container">
+                <p class="advantages__title">Why Choose Us?</p>
+                <p class="advantages__subtitle">Need to send something on time? Delivery is process of transporting goods from a source
+                    location to a predefined destination.</p>
+                <div class="advantages__list">
+                    <div class="advantages__item">
+                        <img class="advantage__logo" src="img/advantages/item1.svg">
+                        <div class="advantage__info">
+                            <p class="advantage__title">
+                                Industry-leading tech
+                            </p>
+                            <p class="advantage__text">
+                                Delivery is process of transporting from source point to predefined destination.
+                            </p>
+                        </div>
+                    </div>
+                    <div class="advantages__item">
+                        <img class="advantage__logo" src="img/advantages/item2.svg">
+                        <div class="advantage__info">
+                            <p class="advantage__title">
+                                Nationwide coverage
+                            </p>
+                            <p class="advantage__text">
+                                Delivery is process of transporting from source point to predefined destination.
+                            </p>
+                        </div>
+                    </div>
+                    <div class="advantages__item">
+                        <img class="advantage__logo" src="img/advantages/item3.svg">
+                        <div class="advantage__info">
+                            <p class="advantage__title">
+                                Fastest Delivery
+                            </p>
+                            <p class="advantage__text">
+                                Delivery is process of transporting from source point to predefined destination.
+                            </p>
+                        </div>
+                    </div>
+                    <div class="advantages__item">
+                        <img class="advantage__logo" src="img/advantages/item4.svg">
+                        <div class="advantage__info">
+                            <p class="advantage__title">
+                                Next day payment
+                            </p>
+                            <p class="advantage__text">
+                                Delivery is process of transporting from source point to predefined destination.
+                            </p>
+                        </div>
+                    </div>
+                    <div class="advantages__item">
+                        <img class="advantage__logo" src="img/advantages/item5.svg">
+                        <div class="advantage__info">
+                            <p class="advantage__title">
+                                Best COD rates
+                            </p>
+                            <p class="advantage__text">
+                                Delivery is process of transporting from source point to predefined destination.
+                            </p>
+                        </div>
+                    </div>
+                    <div class="advantages__item">
+                        <img class="advantage__logo" src="img/advantages/item6.svg">
+                        <div class="advantage__info">
+                            <p class="advantage__title">
+                                Secure handling
+                            </p>
+                            <p class="advantage__text">
+                                Delivery is process of transporting from source point to predefined destination.
+                            </p>
+                        </div>
+                    </div>
+                    <div class="advantages__item">
+                        <img class="advantage__logo" src="img/advantages/item7.svg">
+                        <div class="advantage__info">
+                            <p class="advantage__title">
+                                Product insurance
+                            </p>
+                            <p class="advantage__text">
+                                Delivery is process of transporting from source point to predefined destination.
+                            </p>
+                        </div>
+                    </div>
+                    <div class="advantages__item">
+                        <img class="advantage__logo" src="img/advantages/item8.svg">
+                        <div class="advantage__info">
+                            <p class="advantage__title">
+                                Verified Products
+                            </p>
+                            <p class="advantage__text">
+                                Delivery is process of transporting from source point to predefined destination.
+                            </p>
+                        </div>
+                    </div>
+                    <div class="advantages__item">
+                        <img class="advantage__logo" src="img/advantages/item1.svg">
+                        <div class="advantage__info">
+                            <p class="advantage__title">
+                                Realtime Monitoring
+                            </p>
+                            <p class="advantage__text">
+                                Delivery is process of transporting from source point to predefined destination.
+                            </p>
+                        </div>
+                    </div>
+                </div>
+            </div>
         </section>
         <section class="job-offer">
-            <div class="bike-deliver__reverse"></div>
-            <div class="job-offer__content">
-                <p class="job-offer__title"></p>
-                <p class="job-offer__subtitle"></p>
-                <button type="button" class="job-offer__button"></button>
+            <div class="container job-offer__container">
+                <picture>
+                    <source class="bike-deliver bike-deliver__reverse" srcset="img/biker/biker2x.png" type="image/png" media="(min-resolution: 1.5)">
+                    <img src="img/biker/biker1x.png" alt="biker" class="bike-deliver bike-deliver__reverse">
+                </picture>
+                <div class="job-offer__content">
+                    <p class="job-offer__title">Apply for Ambassador</p>
+                    <p class="job-offer__subtitle">
+                        Need to send something on time? Delivery is process
+                        of transporting goods from a source location to a predefined
+                        destination.
+                    </p>
+                    <button type="button" class="job-offer__button">Apply Now</button>
+                </div>
             </div>
         </section>
         <section class="news-tips">
-            <p class="news-tips__title"></p>
-            <div class="news-tips__list"></div>
+            <div class="container news-tips__container">
+                <p class="news-tips__title">
+                    Company News Our Latest Artical<br>
+                    & Tips for You
+                </p>
+                <div class="news-tips__list">
+                    <div class="news-tips__item">
+                        <picture>
+                            <img src="img/news/item1_1x.png" alt="">
+                        </picture>
+                        <div class="item__suptitle">
+                            <p class="item__design-type">UI / UX Design</p>
+                            <p class="item__view">
+                                <img src="img/news/eye.svg" alt="eye">
+                                <span>12450</span>
+                            </p>
+                        </div>
+                        <p class="item__title">Our UX studio digitally transforms business through design</p>
+                        <p class="item__text">All of these problems are addressable through UX and gamification in particular. That’s not to say that it’s a cure-all.</p>
+                        <a href="" class="item__learn-more">
+                            Learn More <img src="img/news/arrow.svg" alt="arrow" class="item__arrow">
+                        </a>
+                    </div>
+                    <div class="news-tips__item">
+                        <picture>
+                            <img src="img/news/item2_1x.png" alt="">
+                        </picture>
+                        <div class="item__suptitle">
+                            <p class="item__design-type">UI / UX Design</p>
+                            <p class="item__view">
+                                <img src="img/news/eye.svg" alt="eye">
+                                <span>12450</span>
+                            </p>
+                        </div>
+                        <p class="item__title">Our UX studio digitally transforms business through design</p>
+                        <p class="item__text">All of these problems are addressable through UX and gamification in particular. That’s not to say that it’s a cure-all.</p>
+                        <a href="" class="item__learn-more">
+                            Learn More <img src="img/news/arrow.svg" alt="arrow" class="item__arrow">
+                        </a>
+                    </div>
+                    <div class="news-tips__item">
+                        <picture>
+                            <img src="img/news/item3_1x.png" alt="">
+                        </picture>
+                        <div class="item__suptitle">
+                            <p class="item__design-type">UI / UX Design</p>
+                            <p class="item__view">
+                                <img src="img/news/eye.svg" alt="eye">
+                                <span>12450</span>
+                            </p>
+                        </div>
+                        <p class="item__title">Our UX studio digitally transforms business through design</p>
+                        <p class="item__text">All of these problems are addressable through UX and gamification in particular. That’s not to say that it’s a cure-all.</p>
+                        <a href="" class="item__learn-more">
+                            Learn More <img src="img/news/arrow.svg" alt="arrow" class="item__arrow">
+                        </a>
+                    </div>
+                </div>
+            </div>
+
         </section>
         <section class="clients">
-            <p class="clients__title"></p>
-            <div class="clients__list"></div>
+            <div class="container clients__container">
+                <p class="clients__title">Our Clients</p>
+                <div class="clients__list">
+                    <img src="img/clients/google.svg" alt="google">
+                    <img src="img/clients/microsoft.svg" alt="microsoft">
+                    <img src="img/clients/flickr.svg" alt="flickr">
+                    <img src="img/clients/slack.svg" alt="slack">
+                    <img src="img/clients/syngenta.svg" alt="syngenta">
+                    <img src="img/clients/merck.svg" alt="merck">
+                </div>
+            </div>
         </section>
         <footer class="footer">
             <div class="footer__content">
-                <div class="footer__communication">
-                    <div class="company__logo"></div>
-                    <p class="communication__address"></p>
-                    <div class="communication__social-networks">
-
+                <div class="container footer__content__container">
+                    <div class="footer__communication">
+                        <img class="company__logo" src="img/header/logo.svg" alt="">
+                        <p class="communication__address">
+                            10/B, House# 32, Dhaka Uddan <br>
+                            Mohammadpur, Dhaka, Bangladesh
+                        </p>
+                        <div class="communication__social-networks">
+                            <img src="img/social__networks/facebook.svg" alt="facebook">
+                            <img src="img/social__networks/in.svg" alt="linkedin">
+                            <img src="img/social__networks/twitter.svg" alt="twitter">
+                            <img src="img/social__networks/pin.svg" alt="pincerest">
+                            <img src="img/social__networks/instagram.svg" alt="instagram">
+                        </div>
+                    </div>
+                    <div class="footer__important-links">
+                        <div class="important-links__title">Important links</div>
+                        <ul class="important-links__list">
+                            <li class="important-links__item">FAQs</li>
+                            <li class="important-links__item">Blogs</li>
+                            <li class="important-links__item">Privacy Policy</li>
+                            <li class="important-links__item">Trims & Conditions</li>
+                        </ul>
+                    </div>
+                    <div class="footer__policy">
+                        <div class="policy__title">Policy</div>
+                        <ul class="policy__list">
+                            <li class="policy__item">Learner</li>
+                            <li class="policy__item">Partners</li>
+                            <li class="policy__item">Developers</li>
+                            <li class="policy__item">Teaching Centre</li>
+                        </ul>
                     </div>
                 </div>
-                <div class="footer__important-links">
-                    <div class="important-links__title"></div>
-                    <div class="important-links__list"></div>
-                </div>
-                <div class="footer__policy">
-                    <div class="policy__title"></div>
-                    <div class="policy__list"></div>
-                </div>
             </div>
-            <div class="footer__founder"></div>
+            <div class="footer__founder">Copyright @2021 Bonik Delivery</div>
         </footer>
     </body>
 </html>
